--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,24 @@
 @import url(./block/promo/__title/_text/promo__title_text.css);
 @import url(./block/promo/__figure/promo__figure.css);
 
-@import url(./block/about/about.css);
-@import url(./block/about/__title/about__title.css);
-@import url(./block/about/__text/about__text.css);
-@import url(./block/about/__main-text/about__main-text.css);
-@import url(./block/about/__main-text/_container/about__main-text_container.css);
-@import url(./block/about/__main-text/_big/about__main-text_big.css);
-@import url(./block/about/__main-text/_small/about__main-text_small.css);
-@import url(./block/about/__progress-table/about__progress-table.css);
-@import url(./block/about/__progress-table/_green-cell/about__progress-table_green-cell.css);
-@import url(./block/about/__progress-table/_gray-cell/about__progress-table_gray-cell.css);
-@import url(./block/about/__progress-table/_transparent-cell/about__progress-table_transparent-cell.css);
+@import url(./block/block/block.css);
+@import url(./block/block/__title/block__title.css);
+@import url(./block/block/__text/block__text.css);
+@import url(./block/block/__main-text/block__main-text.css);
+@import url(./block/block/__main-text/_size_x/block__main-text_size_x.css);
+@import url(./block/block/__main-text/_size_s/block__main-text_size_s.css);
+@import url(./block/block/__main-text/_size_xl/block__main-text_size_xl.css);
+@import url(./block/block/__main-text/margin_x/block__main-text_margin_x.css);
+@import url(./block/block/__main-text/_align_center/block__main-text_align_center.css);
+
+@import url(./block/block/__main-text-container/block__main-text-container.css);
+
+@import url(./block/progress-table/progress-table.css);
+@import url(./block/progress-table/__gray-cell/progress-table__gray-cell.css);
+@import url(./block/progress-table/__green-cell/progress-table_green-cell.css);
+@import url(./block/progress-table/__transparent-cell/progress-table_transparent-cell.css);
+
+@import url(./block/block/__box-container/block__box-container.css);
+@import url(./block/block/__box/block__box.css);
+
+@import url(./block/block/_bgc_grey/block_bgc_grey.css);
