feat: add AboutMe & Portfolio components

--- a/src/block/block/__box/block__box.css
+++ b/src/block/block/__box/block__box.css
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
 
   width: 90px;
   height: 60px;
