--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,8 @@
 @import url(./block/block/__link-container/block__link-container.css);
 @import url(./block/block/__link-text/block__link-text.css);
 
+@import url(./block/footer/footer.css);
+@import url(./block/footer/__title/footer__title.css);
+@import url(./block/footer/__container/footer__container.css);
+@import url(./block/footer/__right-corner/footer__right-corner.css);
+@import url(./block/footer/__practicum-text/footer__practicum-text.css);
