feat: add Header component

--- a/src/block/header/__sign-in/header__sign-in.css
+++ b/src/block/header/__sign-in/header__sign-in.css
@@ -1,5 +1,4 @@
-.promo__header_sign-in {
-  /* margin: 21px 0 21px 30px; */
+.header__sign-in {
   margin-left: 30px;
   background: #2BE080;
   border-radius: 3px;
