--- a/src/block/header/__films-btn/header__films-btn.css
+++ b/src/block/header/__films-btn/header__films-btn.css
@@ -3,4 +3,9 @@
   margin-right: 16px;
   background: transparent;
   border: none;
+  cursor: pointer;
+}
+
+.header__films-btn:hover {
+  opacity: .6;
 }
