--- a/src/block/header/__sign-up/header__sign-up.css
+++ b/src/block/header/__sign-up/header__sign-up.css
@@ -3,4 +3,9 @@
   background: transparent;
   border: none;
   color: #FFFFFF;
+  cursor: pointer;
+}
+
+.header__sign-up:hover {
+  opacity: .6;
 }
