--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,7 @@
 @import url(./block/search-form/__container/search-form__container.css);
 @import url(./block/search-form/__input/search-form__input.css);
 @import url(./block/search-form/__btn/search-form__btn.css);
+
+@import url(./block/preloader/preloader.css);
+@import url(./block/preloader/__container/preloader__container.css);
+@import url(./block/preloader/__round/preloader__round.css);
