feat: add MoviesCard component

--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,11 @@
 @import url(./block/preloader/preloader.css);
 @import url(./block/preloader/__container/preloader__container.css);
 @import url(./block/preloader/__round/preloader__round.css);
+
+@import url(./block/movies-card/movies-card.css);
+@import url(./block/movies-card/__container/movies-card__container.css);
+@import url(./block/movies-card/__text-container/movies-card__text-container.css);
+@import url(./block/movies-card/__title/movies-card__title.css);
+@import url(./block/movies-card/__duration/movies-card__duration.css);
+@import url(./block/movies-card/__save-btn/movies-card__save-btn.css);
+@import url(./block/movies-card/__img/movies-card__img.css);
