feat: add MoviesCardList component

--- a/src/index.css
+++ b/src/index.css
@@ -86,3 +86,7 @@
 @import url(./block/movies-card/__duration/movies-card__duration.css);
 @import url(./block/movies-card/__save-btn/movies-card__save-btn.css);
 @import url(./block/movies-card/__img/movies-card__img.css);
+
+@import url(./block/movies-card-list/movies-card-list.css);
+@import url(./block/movies-card-list/__container/movies-card-list__container.css);
+@import url(./block/movies-card-list/__more-btn/movies-card-list__more-btn.css);
