--- a/src/block/header/__saved-films-btn/header__saved-films-btn.css
+++ b/src/block/header/__saved-films-btn/header__saved-films-btn.css
@@ -1,4 +1,6 @@
 .header__saved-films-btn {
+  text-decoration: none;
+  color: #000000;
   font-weight: 400;
   background: transparent;
   border: none;
