--- a/src/index.css
+++ b/src/index.css
@@ -91,3 +91,19 @@
 @import url(./block/movies-card-list/movies-card-list.css);
 @import url(./block/movies-card-list/__container/movies-card-list__container.css);
 @import url(./block/movies-card-list/__more-btn/movies-card-list__more-btn.css);
+
+@import url(./block/auth/auth.css);
+@import url(./block/auth/__container/auth__container.css);
+@import url(./block/auth/__hello/auth__hello.css);
+@import url(./block/auth/__logo/auth__logo.css);
+@import url(./block/auth/__form/auth__form.css);
+@import url(./block/auth/__input-container/auth__input-container.css);
+@import url(./block/auth/__input/auth__input.css);
+@import url(./block/auth/__label/auth__label.css);
+@import url(./block/auth/__input-container/_margin_24/auth__input-container_margin_24.css);
+@import url(./block/auth/__error/auth__error.css);
+@import url(./block/auth/__input-container/_error/auth__input-container_error.css);
+@import url(./block/auth/__input/_error/auth__input_error.css);
+@import url(./block/auth/__submit-btn/auth__submit-btn.css);
+@import url(./block/auth/__text/auth__text.css);
+@import url(./block/auth/__link/auth__link.css);
