--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url(./vendor/normalize.css);
 
-@import url(./fonts/inter.css);
+@import url(./vendor/fonts/inter.css);
 
 @import url(./block/header/header.css);
 @import url(./block/header/__entry-buttons/header__entry-buttons.css);
