--- a/src/block/footer/__right-corner/footer__right-corner.css
+++ b/src/block/footer/__right-corner/footer__right-corner.css
@@ -2,3 +2,10 @@
   display: flex;
   flex-direction: row;
 }
+
+@media (max-width: 320px) {
+  .footer__right-corner {
+    flex-direction: column;
+    align-items: center;
+  }
+}
