--- a/src/block/block/__about-student-container/block__about-student-container.css
+++ b/src/block/block/__about-student-container/block__about-student-container.css
@@ -5,3 +5,10 @@
   justify-content: space-between;
   align-items: flex-start;
 }
+
+@media (max-width: 680px) {
+  .block__about-student-container {
+    flex-direction: column;
+    align-items: center;
+  }
+}
