--- a/src/block/block/__box-container/block__box-container.css
+++ b/src/block/block/__box-container/block__box-container.css
@@ -4,4 +4,11 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 440px) {
+  .block__box-container {
+    margin: 50px 0 70px 0;
+  }
 }
