--- a/src/block/block/__main-text/_size_xl/block__main-text_size_xl.css
+++ b/src/block/block/__main-text/_size_xl/block__main-text_size_xl.css
@@ -2,3 +2,10 @@
   font-size: 50px;
   line-height: 58px;
 }
+
+@media (max-width: 440px) {
+  .block__main-text_size_xl {
+    font-size: 30px;
+    line-height: 36px;
+  }
+}
