--- a/src/block/footer/__container/footer__container.css
+++ b/src/block/footer/__container/footer__container.css
@@ -8,3 +8,10 @@
   flex-direction: row;
   justify-content: space-between;
 }
+
+@media (max-width: 320px) {
+  .footer__container {
+    flex-direction: column;
+    align-items: center;
+  }
+}
