--- a/src/block/footer/__practicum-text/footer__practicum-text.css
+++ b/src/block/footer/__practicum-text/footer__practicum-text.css
@@ -1,3 +1,11 @@
 .footer__practicum-text {
   margin-right: 20px;
 }
+
+@media (max-width: 320px) {
+  .footer__practicum-text {
+    margin-right: 0;
+    margin-top: 10px;
+    margin-bottom: 12px;
+  }
+}
