--- a/src/block/promo/__figure/promo__figure.css
+++ b/src/block/promo/__figure/promo__figure.css
@@ -5,3 +5,20 @@
   margin-top: 102px;
   margin-bottom: 60px;
 }
+
+@media(max-width: 768px) {
+  .promo__figure {
+    align-self: center;
+    margin-top: 140px;
+    margin-bottom: 70px;
+    width: 680px;
+    height: 230px;
+  }
+}
+
+@media (max-width: 680px) {
+  .promo__figure {
+    margin-top: 60px;
+    margin-bottom: 40px;
+  }
+}
