--- a/src/block/promo/promo.css
+++ b/src/block/promo/promo.css
@@ -1,8 +1,22 @@
 .promo {
+  overflow: hidden;
   background: #465DFF;
   padding: 0 70px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+}
+
+@media(max-width: 768px) {
+  .promo {
+    align-items: center;
+    padding: 0 30px;
+  }
+}
+
+@media (max-width: 680px) {
+  .promo {
+    padding: 0 10px;
+  }
 }
