feat: add MenuPopup component + adaptive

--- a/src/block/checkbox/__container/checkbox__container.css
+++ b/src/block/checkbox/__container/checkbox__container.css
@@ -2,3 +2,15 @@
   display: flex;
   flex-direction: row;
 }
+
+@media (max-width: 768px) {
+  .checkbox__container {
+    align-self: flex-end;
+  }
+}
+
+@media (max-width: 440px) {
+  .checkbox__container {
+    align-self: center;
+  }
+}
