--- a/src/block/search-form/__btn/search-form__btn.css
+++ b/src/block/search-form/__btn/search-form__btn.css
@@ -4,6 +4,7 @@
   background: url(../../../images/find.png) no-repeat;
   border: none;
   cursor: pointer;
+  padding: 0;
 }
 
 .search-form__btn:hover {
