--- a/src/block/header/__container/header__container.css
+++ b/src/block/header/__container/header__container.css
@@ -1,3 +1,15 @@
 .header__container {
   padding: 0 70px;
 }
+
+@media (max-width: 768px) {
+  .header__container {
+    padding: 0 30px;
+  }
+}
+
+@media (max-width: 320px) {
+  .header__container {
+    padding: 0 14px;
+  }
+}
