--- a/src/index.css
+++ b/src/index.css
@@ -140,3 +140,4 @@
 @import url(./block/popup/_opened/popup_opened.css);
 
 @import url(./block/footer/__link/footer__link.css);
+@import url(./block/popup/__container/popup__container.css);
