--- a/src/block/popup/popup.css
+++ b/src/block/popup/popup.css
@@ -4,11 +4,11 @@
   position: fixed;
   top: 0;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  flex-direction: row;
+  justify-content: flex-end;
   align-items: center;
   visibility: hidden;
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.3);
 
   z-index: 2;
 }
