--- a/src/block/auth/__container/auth__container.css
+++ b/src/block/auth/__container/auth__container.css
@@ -4,3 +4,12 @@
   width: 400px;
   padding: 70px 0;
 }
+
+@media (max-width: 520px) {
+  .auth__container {
+    align-items: center;
+    padding-top: 56px;
+    padding-bottom: 30px;
+    width: 260px;
+  }
+}
