--- a/src/block/movies-card/movies-card.css
+++ b/src/block/movies-card/movies-card.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   width: 364px;
+  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
 }
 
 @media (max-width: 768px) {
