fix: header padding

--- a/src/block/header/__notlog/header__unlog.css
+++ b/src/block/header/__notlog/header__unlog.css
@@ -2,3 +2,15 @@
   background: #465DFF;
   padding: 0 70px;
 }
+
+@media (max-width: 768px) {
+  .header__notlog {
+    padding: 0 30px;
+  }
+}
+
+@media (max-width: 400px) {
+  .header__notlog {
+    padding: 0 10px;
+  }
+}
