--- a/src/index.css
+++ b/src/index.css
@@ -146,3 +146,5 @@
 
 @import url(./block/search-form/__error/search-form__error.css);
 @import url(./block/search-form/_error/search-form_error.css);
+@import url(./block/auth/__btn-container/auth__btn-container.css);
+@import url(./block/auth/__server-error/auth__server-error.css);
