feat: last chages

--- a/src/index.css
+++ b/src/index.css
@@ -148,3 +148,4 @@
 @import url(./block/search-form/_error/search-form_error.css);
 @import url(./block/auth/__btn-container/auth__btn-container.css);
 @import url(./block/auth/__server-error/auth__server-error.css);
+@import url(./block/movies-card/__save-btn/_active/movies-card__save-btn_active.css);
