--- a/src/index.css
+++ b/src/index.css
@@ -149,3 +149,4 @@
 @import url(./block/auth/__btn-container/auth__btn-container.css);
 @import url(./block/auth/__server-error/auth__server-error.css);
 @import url(./block/movies-card/__save-btn/_active/movies-card__save-btn_active.css);
+@import url(./block/header/_bgc_blue/header_bgc_blue.css);
